# vea-validator

./: .env.example  .gitignore  2025-10-18-ass.md  2025-10-19-ass.md  2025-10-19-test-info.md  Cargo.toml  DESIGN_AND_RATIONALE.md  README.md  final_for_real.md  objectives.md
scripts/: fetch-vea-contracts.sh  full-devnet.sh
src/: amb_relay_handler.rs  arb_relay_handler.rs  claim_finder.rs  claim_handler.rs  config.rs  contracts.rs  epoch_watcher.rs  event_listener.rs  finality.rs  indexer.rs  lib.rs  main.rs  proof_relay.rs  scheduler.rs  startup.rs
src/tasks/: challenge.rs  claim.rs  dispatcher.rs  execute_relay.rs  mod.rs  save_snapshot.rs  send_snapshot.rs  start_verification.rs  validate_claim.rs  verify_claim.rs  verify_snapshot.rs  withdraw_deposit.rs
test-contracts/: ArbSysMockForValidator.sol  NodeInterfaceMock.sol  OutboxMock.sol
tests/: arbitrum_to_gnosis_test.rs  bridging_test.rs  challenge_edge_cases_test.rs  comprehensive_test.rs  epoch_watcher_test.rs  event_listener_resilience.rs  event_listener_test.rs  full_integration_test.rs  happy_path_test.rs  integration.rs  message_submission_test.rs  startup_checks_test.rs  validator_integration_test.rs
tests/common/: mod.rs
