[package]
name = "vea-validator"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[[bin]]
name = "vea-validator"
path = "src/main.rs"
test = false

[dependencies]
alloy = "1.0.27"
anyhow = "1.0.99"
dotenv = "0.15.0"
futures-util = "0.3"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.143"
serial_test = "3.0"
